--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^8.0.7",
     "redux-persist": "^6.0.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^13.4.8",
